<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/status_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/status_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pasc_ecard_loading"
            android:textColor="@color/pasc_ecard_tip_color"
            android:textSize="@dimen/pasc_ecard_tip_size" />

        <ProgressBar
            android:id="@+id/progress_footer"
            android:layout_width="20dp"
            android:indeterminateDrawable="@drawable/pasc_ecard_loading_drawable"
            android:indeterminateOnly="true"
            android:indeterminateBehavior="repeat"
            android:layout_height="20dp"
            android:layout_marginLeft="6dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_empty"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:src="@drawable/pasc_ecard_empty_icon" />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/pasc_ecard_empty_no_content"
            android:textColor="@color/pasc_ecard_tip_color"
            android:textSize="@dimen/pasc_ecard_tip_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:src="@drawable/default_no_network" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/pasc_ecard_net_error"
            android:textColor="@color/pasc_ecard_tip_color"
            android:textSize="@dimen/pasc_ecard_tip_size" />
        <TextView
            android:id="@+id/btn_footer_retry"
            android:layout_width="116dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/pasc_ecard_retry"
            android:textColor="@color/pasc_ecard_text_color"
            android:textSize="@dimen/pasc_ecard_title_size"
            android:background="@drawable/pasc_ecard_white_round_bg"
            android:layout_height="44dp" />
    </LinearLayout>
</FrameLayout>