<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:background="@drawable/pasc_ecard_operate_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_add"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pasc_ecard_add_icon" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/pasc_ecard_pop_add"
                android:textColor="@color/pasc_ecard_text_color"
                android:textSize="@dimen/text_size_15" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/pasc_ecard_line_color" />

        <LinearLayout
            android:id="@+id/ll_sort"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pasc_ecard_drag_icon" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/pasc_ecard_pop_sort"
                android:textColor="@color/pasc_ecard_text_color"
                android:textSize="@dimen/text_size_15" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/pasc_ecard_line_color" />

        <LinearLayout
            android:id="@+id/ll_unbind"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pasc_ecard_pop_unbind" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/pasc_ecard_pop_unbing"
                android:textColor="@color/pasc_ecard_text_color"
                android:textSize="@dimen/text_size_15" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>