<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pasc_ecard_list_bg_color"
    android:orientation="vertical">

    <com.pasc.lib.widget.toolbar.PascToolbar
        android:id="@+id/toolbar"
        style="@style/BlackFontToolbar"
        android:background="@color/color_white"
        app:enable_under_divider="true"
        app:support_translucent_status_bar="true"
        app:title="@string/pasc_ecard_list_title" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:paddingLeft="8dp"
        android:paddingTop="10dp"
        android:paddingRight="8dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:src="@drawable/pasc_ecard_add_info_bg" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"

            android:textColor="@color/pasc_ecard_item_address_color"
            android:textSize="@dimen/text_size_13" />

        <TextView
            android:id="@+id/tv_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/white_ffffff"
            android:textSize="@dimen/text_size_22"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="15dp"
            android:maxLines="1"
            android:textColor="@color/white_ffffff"
            android:textSize="@dimen/text_size_13" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_id"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/white_ffffff"
            android:textSize="@dimen/text_size_13" />

        <ImageView
            android:id="@+id/iv_eye"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_below="@id/tv_name"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/tv_id"
            android:src="@drawable/pasc_ecard_eye_show" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/selector_primary_button"
        android:gravity="center"
        android:text="@string/pasc_ecard_add_card"
        android:textColor="@color/pasc_ecard_btn_text_color"
        android:textSize="@dimen/text_size_17"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/pasc_ecard_cancel_card"
        android:textColor="@color/pasc_primary"
        android:textSize="@dimen/text_size_17"
        android:visibility="gone" />


</LinearLayout>